Se sube configuración de url

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "priority-tickets-export",
   "version": "0.1.0",
   "private": true,
-  "homepage": "cr-urra.github.io/priority-tickets-exports",
+  "homepage": "https://cr-urra.github.io/priority-tickets-exports",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
