--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-react": "^0.5.0-alpha.14",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "zendesk-node-api": "^1.3.0"
   },
   "scripts": {
     "predeploy": "npm run build",
