Se sube front desarrollado

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "priority-tickets-export",
+  "name": "tickets",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://cr-urra.github.io/priority-tickets-exports",
