--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^4.0.2",
     "web-vitals": "^1.1.0",
     "zendesk-node-api": "^1.3.0"
   },
