--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://cr-urra.github.io/priority-tickets-exports",
   "dependencies": {
+    "@react-pdf/renderer": "^1.6.13",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
@@ -14,7 +15,6 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^4.0.2",
-    "react-to-pdf": "0.0.13",
     "web-vitals": "^1.1.0",
     "zendesk-node-api": "^1.3.0"
   },
