--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-export-excel": "^0.5.3",
+    "react-html-table-to-excel": "^2.0.0",
     "react-scripts": "^4.0.2",
     "react-to-print": "^2.12.3",
     "web-vitals": "^1.1.0",
