--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tickets",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://cr-urra.github.io/priority-tickets-exports",
+  "homepage": "https://cr-urra.github.io/tickets-exports",
   "dependencies": {
     "@react-pdf/renderer": "^1.6.13",
     "@testing-library/jest-dom": "^5.11.9",
@@ -16,7 +16,7 @@
     "react-dom": "^17.0.1",
     "react-export-excel": "^0.5.3",
     "react-html-table-to-excel": "^2.0.0",
-    "react-scripts": "^4.0.2",
+    "react-scripts": "^4.0.3",
     "react-to-print": "^2.12.3",
     "web-vitals": "^1.1.0",
     "zendesk-node-api": "^1.3.0"
